Fix blog post overflow

--- a/src/templates/blog-post.scss
+++ b/src/templates/blog-post.scss
@@ -6,6 +6,7 @@
   padding: 0;
   margin: 0;
   width: 100%;
+  max-width: inherit;
 
   h1,
   h2,
